Fixed mobile menu z-index value

--- a/Home.css
+++ b/Home.css
@@ -161,7 +161,7 @@ nav {
   position: absolute;
   top: 15.8rem;
   left: 0;
-  z-index: 0;
+  z-index: 3;
   width: fit-content;
   background-color: #cc0202;
   padding: 0 0.5rem 0.5rem 0.5rem;
